--- a/index.html
+++ b/index.html
@@ -1,40 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flavour - FastFood </title>
+    <title>Assignment no 01</title>
 </head>
-
 <body>
-    <div
-        style="width: 80%; margin: 0 auto; background-color: #373737; min-height: 1200px; padding: 10px 0 0 10px; border-radius: 8px;">
-        <h1 style="text-align: center; color: tomato;">Flavour <small>(
-            中國分公司)</small></h1>
-        <img src="https://cdn.downtoearth.org.in/library/large/2019-03-05/0.89399200_1551782137_fast1.jpg" alt="banner"
-            style="width: 100%;height: 600px;">
-        <div style="width: 80%;margin: 0 auto; text-align: ;">
-            <h1 style="color: tomato;margin: 20px 0 0 0;">Menu</h1>
-            <ul style="color:#fff;font-size: 28px; list-style-type: none; padding: 0 0 0 0; margin: 0 0 0 0;">
-                <li>Hamburger</li>
-                <li>Cheeseburger</li>
-                <li>Sandwich</li>
-                <li>Milk shake</li>
-                <li>Muffin</li>
-                <li>Burrito</li>
-                <li>Biscuit</li>
-                <li>Taco</li>
-                <li>Hot dog</li>
-                <li>Fried chicken</li>
-            </ul>
-            <p style="font-size: 40px;color: tomato;text-align:center; margin: 10px 0 0 20px;">
-                我們提供城裡最好的快餐 
-            </p>
-        </div>
-
-    </div>
-
+    <h1>I like to go swimming  in the summer.</h1>
+    <p>Swimming is my most favourite activity in the summer. when the sun is shining and the air is warm. you will find me dipping into my backyard pool. Its not an impressive pool.only three feet deep. but its mine</p>
+    <p>There are three reasons I like to swim:</p>
+    <ul>
+        <li>I gets alot of exercise.</li>
+        <li>I enjoy the freedom</li>
+        <li>I have an opportunity.</li>
+    </ul>
 </body>
-
 </html>
